vs/spin-deck.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spin-deck-route
spec:
  hosts:
  - "spindeck.albertsons.opsmx.com"
  gateways:
  - spinnaker-gateway
  http:
  - name: "deck-route"
    match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: spin-deck
        port: 
          number: 9000
