vs/spin-gate.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spin-gate-route
spec:
  hosts:
  - "spingate.albertsons.opsmx.com"
  gateways:
  - spinnaker-gateway
  http:
  - name: "gate-route"
    match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: spin-gate
        port:
          number: 8084
